--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     margin-right: auto;
     width: 50%;
   }
+
 body {
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
@@ -42,4 +43,13 @@ p {
   font-size: 20px;
   padding-left: 20px;
 
+}
+.avatar 
+{
+  width: 10%;
+  border-radius: 50%;
+  align-content: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
